@@ -21,7 +21,8 @@ public class RoundRobinLoadBalancer implements LoadBalancer {
         // 过滤出健康的实例
         List<ServiceInstance> healthyInstances = instances.stream()
                 .filter(ServiceInstance::isHealthy)
-                .collect(Collectors.toList());
+                .filter(ServiceInstance::isEnabled)
+                .toList();
 
         if (healthyInstances.isEmpty()) {
             return null;
